--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="title_activity_whyus">WHY US</string>
     <string name="title_activity_contactus">CONTACT US</string>
     <string name="title_activity_home">Celpip Store</string>
-    <string name="title_activity_dashboard">Dashboard</string>
+    <string name="title_activity_dashboard"></string>
     <string name="title_activity_earn__fee__coins">EARN FEE COINS</string>
     <string name="title_activity_competitive__english">COMPETITIVE ENGLISH</string>
     <string name="title_activity_vocabulary__tests">VOCABULARY TESTS</string>
